--- a/AspNetKurumsalWeb/Web.config
+++ b/AspNetKurumsalWeb/Web.config
@@ -51,6 +51,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="KurumsalDBEntities" connectionString="metadata=res://*/Models.KurumsalDB.csdl|res://*/Models.KurumsalDB.ssdl|res://*/Models.KurumsalDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=KurumsalDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name ="KurumsalWebDB" connectionString="Server=(localdb)\MSSQLLocalDB;Database=KurumsalWebDB;Integrated Security = True" providerName="System.data.SqlClient"/>
   </connectionStrings>
 </configuration>
