--- a/AspNetKurumsalWeb/AspNetKurumsalWeb.csproj
+++ b/AspNetKurumsalWeb/AspNetKurumsalWeb.csproj
@@ -1455,6 +1455,9 @@
     <Content Include="Views\Sliders\Index.cshtml" />
     <Content Include="Views\Home\SliderPartial.cshtml" />
     <Content Include="Views\Home\Hakkimizda.cshtml" />
+    <Content Include="Views\Home\FooterPartial.cshtml" />
+    <Content Include="Views\Home\Hizmetlerimiz.cshtml" />
+    <Content Include="Views\Home\Iletisim.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
