--- a/AspNetKurumsalWeb/AspNetKurumsalWeb.csproj
+++ b/AspNetKurumsalWeb/AspNetKurumsalWeb.csproj
@@ -1458,6 +1458,10 @@
     <Content Include="Views\Home\FooterPartial.cshtml" />
     <Content Include="Views\Home\Hizmetlerimiz.cshtml" />
     <Content Include="Views\Home\Iletisim.cshtml" />
+    <Content Include="Views\Home\Blog.cshtml" />
+    <Content Include="Views\Home\BlogKategoriPartial.cshtml" />
+    <Content Include="Views\Home\BlogKayitPartial.cshtml" />
+    <Content Include="Views\Home\BlogDetay.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
